# tape-sort

./: CMakeLists.txt  README.md
include/: external_sort.h  generate_tests.h  tape.h
res/: config  input  output  tape_test_in1
src/: external_sort.cpp  external_sort_test.cpp  generate_test.cpp  main.cpp  tape.cpp
tmp/: tmp_1
